--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,7 +6,9 @@
 $font-family-base: "helvetica neue", helvetica, arial, sans-serif;
 $font-family-heading: $font-family-base;
 
-$color-gray:          #333333;
+$color-gray:          #333;
+$color-gray-light:    #999;
+$color-gray-lighter:  #f0f0f0;
 $color-brand:         rgb(72, 194, 90);
 $color-brand-dark:    rgb(33, 84, 42);
 $color-brand-light:   rgb(174, 230, 185);
@@ -33,7 +35,7 @@ $color-brand-lighter: rgb(214, 243, 218);
 }
 
 body {
-  background: white;
+  background-color: white;
   font-family: $font-family-base;
   color: $color-gray;
   font-size: 16px;
@@ -74,6 +76,70 @@ ul {
   padding: 0;
 }
 
+input {
+  appearance: none;
+  border: 0;
+  background-color: $color-brand-light;
+  padding: 0.5em;
+  color: $color-brand-dark;
+  border-radius: 3px;
+  height: 2em;
+  float: left;
+  margin-left: 0.5em;
+
+  &::placeholder {
+    color: $color-brand;
+  }
+
+  &:focus {
+    outline: none;
+    background-color: white;
+
+    &::placeholder {
+      color: $color-brand-lighter;
+    }
+  }
+}
+
+button,
+input[type="submit"] {
+  appearance: none;
+  background-color: $color-gray;
+  background-image: none;
+  color: white;
+  font-weight: bold;
+  border: 0;
+  line-height: 2em;
+  padding: 0 0 0 1em;
+  border-radius: 3px;
+
+  &:hover {
+    background-color: $color-brand-dark;
+  }
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 1px white, 0 0 0 4px $color-brand;
+  }
+
+  span {
+    width: 2em;
+    display: inline-block;
+    margin-left: 1em;
+    border-left: 1px solid white;
+    text-align: center;
+  }
+}
+
+input[type="submit"] {
+  padding: 0 1em;
+  background-color: darken($color-brand, 10%);
+}
+
+input[type="submit"]:focus,
+input:focus {
+  box-shadow: 0 0 0 1px $color-brand, 0 0 0 4px $color-brand-dark;
+}
 
 .main__header {
   @include clearfix;
@@ -88,8 +154,15 @@ ul {
 
 .mailing-list {
   position: absolute;
-  top: 0;
+  top: 0.5em;
   right: 1em;
+}
+
+.mailing-list__description {
+  float: left;
+  line-height: 2em;
+  color: $color-brand-lighter;
+  font-weight: bold;
 }
 
 .brand__title {
@@ -97,7 +170,7 @@ ul {
 }
 
 .brand__description {
-  padding-bottom: 2em;
+  padding: 1em 0 2em;
 }
 
 .main__content {
@@ -110,7 +183,7 @@ ul {
 }
 
 thead {
-  background-color: $color-brand-dark;
+  background-color: darken($color-brand, 15%);
   color: $color-brand;
 }
 
@@ -120,7 +193,7 @@ tbody {
     cursor: pointer;
 
     &:hover {
-      background-color: #f0f0f0;
+      background-color: $color-gray-lighter;
     }
   }
 
@@ -165,8 +238,4 @@ td {
   color: white;
   line-height: $size;
   text-align: center;
-}
-
-.main__footer {
-
 }
