--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -143,6 +143,53 @@ input:focus {
   box-shadow: 0 0 0 1px $color-brand, 0 0 0 4px $color-brand-dark;
 }
 
+dl {
+
+}
+
+dt {
+  @extend %small;
+  font-weight: bold;
+  color: $color-gray-light;
+}
+
+dd {
+  margin: 0;
+}
+
+tbody {
+  th,
+  td {
+    padding: 0.5em;
+  }
+}
+
+th,
+td {
+  text-align: left;
+
+  strong {
+    display: block;
+  }
+
+  button {
+    float: right;
+  }
+}
+
+td {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+.pull-left {
+  float: left !important;
+}
+
+.pull-right {
+  float: right !important;
+}
+
 .main__header {
   @include clearfix;
   background-color: $color-brand;
@@ -182,51 +229,37 @@ input:focus {
 
 .startups {
   width: 100%;
-}
 
-thead {
-  background-color: darken($color-brand, 15%);
-  color: $color-brand;
-}
+  thead {
+    background-color: darken($color-brand, 15%);
+    color: $color-brand;
+  }
 
-tbody {
-  tr {
-    cursor: pointer;
-    padding: 0.5em 0;
+  tbody {
+    tr {
+      cursor: pointer;
+      padding: 0.5em 0;
 
-    &:hover {
-      background-color: $color-gray-lighter;
+      &:hover {
+        background-color: $color-gray-lighter;
+      }
+    }
+
+    td:first-child {
+      padding-right: 0;
+      width: 3em;
     }
   }
 
-  td:first-child {
-    padding-right: 0;
-    width: 3em;
-  }
-}
+  th,
+  td {
+    line-height: 3em;
+    padding-left: 1em;
+    padding-right: 1em;
 
-th,
-td {
-  line-height: 3em;
-  padding-left: 1em;
-  padding-right: 1em;
-  text-align: left;
-
-  &.stacked {
-    line-height: 1em;
-  }
-
-  strong {
-    display: block;
-  }
-
-  button {
-    float: right;
-  }
-
-  tbody & {
-    padding-bottom: 0.5em;
-    padding-top: 0.5em;
+    &.stacked {
+      line-height: 1em;
+    }
   }
 }
 
@@ -246,9 +279,56 @@ td {
   background-color: $color-gray;
   bottom: 0;
   color: $color-gray-lighter;
-  padding: 2em;
   position: fixed;
   right: 0;
   top: 0;
   width: 33%;
+
+  .scroll-container {
+    position: absolute;
+    top: 7.75em;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: auto;
+  }
+}
+
+.panel__title,
+.panel__content {
+  padding: 2em;
+}
+
+.panel__title {
+  background-color: lighten($color-gray, 10%);
+
+  .startup-logo {
+    float: left;
+    margin-right: 0.25em;
+    font-size: 3em;
+  }
+}
+
+.panel__content {
+  ~ .panel__content {
+    border-top: 2px solid lighten($color-gray, 10%);
+  }
+
+  table {
+    width: 100%;
+    margin-top: 0.5em;
+  }
+
+  tbody {
+    border: 1px solid lighten($color-gray, 10%);
+  }
+
+  thead {
+    @extend %small;
+    color: $color-gray-light;
+  }
+
+  tr:nth-child(even) {
+    background-color: lighten($color-gray, 5%);
+  }
 }
