Finish panel and split up stylesheets

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,333 +2,9 @@
 @import "_normalize.scss/_normalize.scss";
 // endbower
 
-// VARIABLES
-$main-width: 1000px;
-
-$font-family-base: "helvetica neue", helvetica, arial, sans-serif;
-$font-family-heading: $font-family-base;
-
-$color-gray:          #333;
-$color-gray-light:    #999;
-$color-gray-lighter:  #f0f0f0;
-$color-brand:         rgb(72, 194, 90);
-$color-brand-dark:    rgb(33, 84, 42);
-$color-brand-light:   rgb(174, 230, 185);
-$color-brand-lighter: rgb(214, 243, 218);
-
-@mixin clearfix {
-  &:after {
-    content:"";
-    display:table;
-    clear:both;
-  }
-}
-
-%width-wrapper {
-  margin: 0 auto;
-  padding: 0 1em;
-  position: relative;
-  width: $main-width;
-}
-
-// BASE
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: white;
-  color: $color-gray;
-  font-family: $font-family-base;
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: $font-family-heading;
-  margin: 0;
-}
-
-p {
-  margin: 0;
-  padding-bottom: 1em;
-}
-
-a {
-  color: $color-brand;
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-%small,
-small {
-  font-size: 0.75em;
-}
-
-ol,
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-input {
-  appearance: none;
-  background-color: $color-brand-light;
-  border-radius: 3px;
-  border: 0;
-  color: $color-brand-dark;
-  float: left;
-  height: 2em;
-  margin-left: 0.5em;
-  padding: 0.5em;
-
-  &::placeholder {
-    color: $color-brand;
-  }
-
-  &:focus {
-    background-color: white;
-    outline: none;
-
-    &::placeholder {
-      color: $color-brand-lighter;
-    }
-  }
-}
-
-button,
-input[type="submit"] {
-  appearance: none;
-  background-color: $color-gray;
-  background-image: none;
-  border-radius: 3px;
-  border: 0;
-  color: white;
-  font-weight: bold;
-  line-height: 2em;
-  padding: 0 0 0 1em;
-
-  &:hover {
-    background-color: $color-brand-dark;
-  }
-
-  &:focus {
-    box-shadow: 0 0 0 1px white, 0 0 0 4px $color-brand;
-    outline: none;
-  }
-
-  span {
-    border-left: 1px solid white;
-    display: inline-block;
-    margin-left: 1em;
-    text-align: center;
-    width: 2em;
-  }
-}
-
-input[type="submit"] {
-  background-color: darken($color-brand, 10%);
-  padding: 0 1em;
-}
-
-input[type="submit"]:focus,
-input:focus {
-  box-shadow: 0 0 0 1px $color-brand, 0 0 0 4px $color-brand-dark;
-}
-
-dl {
-
-}
-
-dt {
-  @extend %small;
-  font-weight: bold;
-  color: $color-gray-light;
-}
-
-dd {
-  margin: 0;
-}
-
-tbody {
-  th,
-  td {
-    padding: 0.5em;
-  }
-}
-
-th,
-td {
-  text-align: left;
-
-  strong {
-    display: block;
-  }
-
-  button {
-    float: right;
-  }
-}
-
-td {
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
-.pull-left {
-  float: left !important;
-}
-
-.pull-right {
-  float: right !important;
-}
-
-.main__header {
-  @include clearfix;
-  background-color: $color-brand;
-  color: $color-brand-dark;
-  padding: 2em 0 3em;
-}
-
-.main__header__wrapper {
-  @extend %width-wrapper;
-}
-
-.mailing-list {
-  position: absolute;
-  right: 1em;
-  top: 0.5em;
-}
-
-.mailing-list__description {
-  color: $color-brand-lighter;
-  float: left;
-  font-weight: bold;
-  line-height: 2em;
-}
-
-.brand__title {
-  color: white;
-}
-
-.brand__description {
-  padding: 1em 0 2em;
-}
-
-.main__content {
-  @extend %width-wrapper;
-  margin-top: -50px;
-}
-
-.startups {
-  width: 100%;
-
-  thead {
-    background-color: darken($color-brand, 15%);
-    color: $color-brand;
-  }
-
-  tbody {
-    tr {
-      cursor: pointer;
-      padding: 0.5em 0;
-
-      &:hover {
-        background-color: $color-gray-lighter;
-      }
-    }
-
-    td:first-child {
-      padding-right: 0;
-      width: 3em;
-    }
-  }
-
-  th,
-  td {
-    line-height: 3em;
-    padding-left: 1em;
-    padding-right: 1em;
-
-    &.stacked {
-      line-height: 1em;
-    }
-  }
-}
-
-.startup-logo {
-  $size: 1.25em;
-  background-color: $color-gray;
-  border-radius: $size / 2;
-  color: white;
-  font-size: 2em;
-  height: $size;
-  line-height: $size;
-  text-align: center;
-  width: $size;
-}
-
-.panel {
-  background-color: $color-gray;
-  bottom: 0;
-  color: $color-gray-lighter;
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 33%;
-
-  .scroll-container {
-    position: absolute;
-    top: 7.75em;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    overflow: auto;
-  }
-}
-
-.panel__title,
-.panel__content {
-  padding: 2em;
-}
-
-.panel__title {
-  background-color: lighten($color-gray, 10%);
-
-  .startup-logo {
-    float: left;
-    margin-right: 0.25em;
-    font-size: 3em;
-  }
-}
-
-.panel__content {
-  ~ .panel__content {
-    border-top: 2px solid lighten($color-gray, 10%);
-  }
-
-  table {
-    width: 100%;
-    margin-top: 0.5em;
-  }
-
-  tbody {
-    border: 1px solid lighten($color-gray, 10%);
-  }
-
-  thead {
-    @extend %small;
-    color: $color-gray-light;
-  }
-
-  tr:nth-child(even) {
-    background-color: lighten($color-gray, 5%);
-  }
-}
+@import "variables";
+@import "helpers";
+@import "base";
+@import "header";
+@import "main";
+@import "panel";
