--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -2,12 +2,17 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-color: white;
   color: $color-gray;
   font-family: $font-family-base;
   font-size: 16px;
   line-height: 1.5;
+  min-height: 100%;
 }
 
 h1,
