--- a/app/styles/_panel.scss
+++ b/app/styles/_panel.scss
@@ -1,11 +1,14 @@
+$panel-width: 33%;
+
 .panel {
+  transition: transform 0.2s ease-in-out;
   background-color: $color-gray;
   bottom: 0;
   color: $color-gray-lighter;
   position: fixed;
-  right: 0;
+  right: -($panel-width);
   top: 0;
-  width: 33%;
+  width: $panel-width;
 
   .scroll-container {
     position: absolute;
@@ -14,6 +17,10 @@
     bottom: 4em;
     right: 0;
     overflow: auto;
+  }
+
+  .show-panel & {
+    transform: translate3d(-100%, 0, 0);
   }
 }
 
@@ -45,13 +52,17 @@
     margin-top: 0.5em;
   }
 
-  tbody {
-    border: 1px solid lighten($color-gray, 10%);
-  }
-
   thead {
     @extend %small;
     color: $color-gray-light;
+
+    th {
+      padding: 0.5em;
+    }
+  }
+
+  tbody {
+    border: 1px solid lighten($color-gray, 10%);
   }
 
   tr:nth-child(even) {
