--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -91,7 +91,7 @@ input[type="submit"] {
   }
 
   &:focus {
-    box-shadow: 0 0 0 1px white, 0 0 0 4px $color-brand;
+    box-shadow: 0 0 0 1px white, 0 0 0 4px $color-brand-light;
     outline: none;
   }
 
