--- a/app/styles/_panel.scss
+++ b/app/styles/_panel.scss
@@ -9,6 +9,7 @@ $panel-width: 33%;
   top: 0;
   transition: transform 0.2s ease-in-out;
   width: $panel-width;
+  z-index: 11;
 
   .scroll-container {
     bottom: 4em;
@@ -79,5 +80,27 @@ $panel-width: 33%;
 
   button {
     float: right;
+
+    &:focus {
+      box-shadow: 0 0 0 1px lighten($color-gray, 10%), 0 0 0 4px darken($color-brand, 15%);
+    }
+  }
+}
+
+.panel__background {
+  transition: opacity 0.3s linear;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba($color-brand-light, 0.6);
+  z-index: 10;
+  pointer-events: none;
+  opacity: 0;
+
+  .show-panel & {
+    opacity: 1;
+    pointer-events: auto;
   }
 }
