--- a/app/styles/_main.scss
+++ b/app/styles/_main.scss
@@ -75,3 +75,8 @@
   background-color: $color-brand-lighter;
   border-right: 2px solid $color-brand;
 }
+
+.countdown {
+  color: white;
+  padding-left: 0.5em;
+}
