--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -118,6 +118,14 @@ input:focus {
   box-shadow: 0 0 0 1px $color-brand, 0 0 0 4px $color-brand-dark;
 }
 
+dl {
+  margin: 0;
+
+  ~ dl {
+    margin-top: 0.5em;
+  }
+}
+
 dt {
   @extend %small;
   font-weight: bold;
